namespace Gbs.Domain.Lessons;

public class Lesson
{
    public int Id { get; set; }
    public string Name { get; set; } = string.Empty;
    public string? VideoUrl { get; set; }
    public int Order { get; set; }
    public Visibility IsVisible { get; set; }
    
    public int GenerationId { get; set; }
    public Generation Generation { get; set; } = null!;

    public int? SubjectId { get; set; }
    public Subject? Subject { get; set; } = null!;

    public int TeacherId { get; set; }
    public Teacher Teacher { get; set; } = null!;
}