namespace Gbs.Shared.Enums;

public enum MessageType
{
    Comment,
    Answer,
}